fixed description overflow

--- a/src/app/meetups/view-meetups/meetups-view.scss
+++ b/src/app/meetups/view-meetups/meetups-view.scss
@@ -4,6 +4,8 @@
 :host {
   .view-container {
     display: block;
+    max-height: 60vh;
+    overflow: auto;
   }
   .left-tile {
     a {
